"feat: [fix]swagger_example&&[add]GetClassAvgScore"
